# OpenMaya

src/common/cpp/mayarendernodes/: renderGlobalsNode.cpp
src/common/cpp/memory/: memoryInfo.cpp  memoryInfo.h
src/common/cpp/utilities/: attrTools.h  tools.h
src/mayaToMantra/: CMakeLists.txt
src/mayaToMantra/src/: mayatomantra.cpp  mtm_mayaScene.cpp  mtm_mayaScene.h
src/mayaToMantra/src/shadingTools/: mtm_material.h
